--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
     <title>SEG3125 Project 1 - Dan Dubois - 300261542</title>
-    <script type="module" crossorigin src="/assets/main-Dnp06ex1.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-1CKJO40P.css">
+    <script type="module" crossorigin src="/Carls-Cars/assets/main-DPlqWVRJ.js"></script>
+    <link rel="stylesheet" crossorigin href="/Carls-Cars/assets/main-1CKJO40P.css">
   </head>
   <body>
     <div id="root"></div>
