--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
-    <title>SEG3125 Project 1 - Dan Dubois - 300261542</title>
+    <title>Carl's Cars - SEG 3125 Project 1 - Dan Dubois 300261542</title>
   </head>
   <body>
     <div id="root"></div>
