--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
-    <title>SEG3125 Project 1 - Dan Dubois - 300261542</title>
-    <script type="module" crossorigin src="/Carls-Cars/assets/main-DPlqWVRJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/Carls-Cars/assets/main-1CKJO40P.css">
+    <title>Carl's Cars - SEG 3125 Project 1 - Dan Dubois 300261542</title>
+    <script type="module" crossorigin src="/Carls-Cars/assets/main-_t5dMzqM.js"></script>
+    <link rel="stylesheet" crossorigin href="/Carls-Cars/assets/main-CMS_HKd5.css">
   </head>
   <body>
     <div id="root"></div>
